--- a/SampleLoginPage/login.html
+++ b/SampleLoginPage/login.html
@@ -18,7 +18,7 @@ error_reporting(E_ALL ^ E_NOTICE);
 			<img src="images/loginpic.jpg" class="avatar1"/>
 		</center>
 	
-	<form class="myform" action="login.php" method="post" name="loginForm">
+	<form class="myform" action="login.html" method="post" name="loginForm">
 		<label><font face="Comic Sans MS">Username:</font></label>
 		<br>
 		<input name="username" type="text" class="inputvalues" placeholder="Username" value="<?php if(isset($_COOKIE["username"])) {echo $_COOKIE["username"];} ?>" required/>
