--- a/SampleLoginPage/index.html
+++ b/SampleLoginPage/index.html
@@ -11,14 +11,14 @@ require 'dbconfig/config.php';
 <body style="background-color:#ecf0f1;background-image:url('images/login.jpg');background-size:cover">
 <div>
 <div class="container" style="position:absolute;left:20%;">
-  <a href="login.php"><img src="images/user.jpg" alt="Avatar" class="image">
+  <a href="login.html"><img src="images/user.jpg" alt="Avatar" class="image">
   <div class="overlay" id="user">
     <div class="text" style="color:#F8EFBA"><font face="Comic Sans MS">Hello User</font></div>
   </div>
   </a>
 </div>
 <div class="container" style="position:absolute;right:20%">
-  <a href="login.php"><img src="images/admin.jpg" alt="Avatar" class="image">
+  <a href="login.html"><img src="images/admin.jpg" alt="Avatar" class="image">
   <div class="overlay" id="admin">
     <div class="text" style="color:#2C3A47;"><font face="Comic Sans MS">Hello Admin</font></div>
   </div>
